...
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/activityMain_bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activityMain_primaryFragmentHost">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activityMain_newProjectButton"
            style="@style/default_large_fab_style_activity_main"
            app:rippleColor="#ccadff"
            android:layout_gravity="bottom|end"
            android:backgroundTint="@color/activityMainFAB_backgroundColor"
            android:contentDescription="@string/activityMain_newProjectButton_contentDescription" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
